[package]
name = "poseidon"
version = "0.1.0"
edition = "2018"
authors = ["imsk17 <imsumitkumar17@gmail.com>"]
description = "A rather ambitious project - A blockchain implementation in rust"
repository = "https://github.com/imsk17/poseidon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
hex = "0.4.3"
num-bigint = "0.4.0"
rocksdb = "0.17.0"
bincode = "1.3.3"
serde = { version= "1.0.127", features=["derive"] }
color-eyre = "0.5"
eyre = "0.6.5"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
thiserror = "1.0.26"
p256 = { version = "0.9.0", features = ["ecdsa", "ecdsa-core"] }
rand_core = "0.6.0"
ripemd160 = "0.9.1"
bs58 = "0.4.0"